--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "formidable": "^3.5.1",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.1",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fetching-library": "^1.7.6",
